--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
  
    <section id="four">
     <div class="end3"><p>I'm not sure what help I can be, but maybe you are right<br/>maybe they do need me to remind them with<br/>gentle pushes<br/>that bonds can break<br/>that love is staying.</p></div>
-    <div class="end2"><h2 class="h2-end">- End -</h2><br/><a href="#top" id="reloader">Click here</a> or Scroll up and refresh to re-read.</div>
+    <div class="end2"><h2 class="h2-end">- End -</h2><br/><a href="#top" id="reloader">Click here</a> or scroll up and refresh to re-read.</div>
 
     <div class="inner end">
   
