--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
   <a name="return"></a>
   <a href="two.html" class="dots" id="dot3"></a>
   <a href="three.html" class="dots" id="dot4"></a>
-  <a href="four.html" class="dots" id="dot5"></a>
+  <a href="three-two.html" class="dots" id="dot4-2"></a>
+  <a href="four.html" class="dots" id="dot5-2"></a>
+  <a href="four-two.html" class="dots" id="dot5"></a>
   <a href="five.html" class="dots" id="dot6"></a>
   <div class="wrap-div">
      <p class="dir2">Explore the dots.</p>
