--- a/three-two.html
+++ b/three-two.html
@@ -26,13 +26,13 @@
         <div class="chevron"></div>
       </div>
     <section id="future-two-one" class="panel">
-      <div class="inner"><p> I didn't want to have to look at my sad sorry face anymore.  I'd look in the mirror and see my eyes and I'd want to just rip them out of my head and stomp on them. And one thing I learned pretty quick is that if you want to be punished there's always people around who are happy to do it. </p>
+      <div class="inner"><p> I didn't want to have to look at my sad sorry face anymore.  I'd look in the mirror and see my eyes and I'd want to just rip them out of my head and stomp on them. </p>
        
           </div>
     </section>
     <section id="future-two-two" class="panel">
       <div class="inner">
-        <p>Not everyone, some people looked at me like I wasn't making sense at all, but those weren't my people. The one's I wanted were the ones who stayed through it all and yelled back at me and sometimes hit me and then cried with me about how fucked up we were and how we only really had each other and let's go take these bottles in so we can at least get another six pack. Those people were my people.</p> 
+        <p>One thing I learned pretty quick is that if you want to be punished there's always people around who are happy to do it. Not everyone, some people looked at me like I wasn't making sense at all, but those weren't my people. The one's I wanted were the ones who stayed through it all and yelled back at me and sometimes hit me and then cried with me about how fucked up we were and how we only really had each other and let's go take these bottles in so we can at least get another six pack. Those people were my people.</p> 
              </div>
     </section>
 
