--- a/three-two.html
+++ b/three-two.html
@@ -39,7 +39,7 @@
     <section id="future-two-three" class="panel last-slide">
       <div class="inner">
 
-      <p>From here it all just looks so unnecessary. I'm not saying that it wasn't sad that I gave up Jimmy, I'm not saying that I wouldn't want it some other way with me able to give him all he needed and some people around me to give me a break sometimes. But all that guilt, all that punishing myself over and over and sinking down by the weight of my broken heart. I didn't have to do that all.</p> 
+      <p>From here it all just looks so unnecessary. I'm not saying that it wasn't sad that I gave up Jimmy, I'm not saying that I wouldn't want it some other way with me able to give him all he needed and some people around me to give me a break sometimes. But all that guilt, all that punishing myself over and over and sinking down under the weight of my broken heart. I didn't have to do that all.</p> 
       <p>But I see how I got into that stream. How I was carried along. How I felt there was no way out.</p>
       <a href="index.html#return" class="nav-back-end"><img src="img/tree.png" /> Tree</a>
       </div>
