--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <a href="three.html" class="dots" id="dot4"></a>
   <a href="three-two.html" class="dots" id="dot4-2"></a>
   <a href="four.html" class="dots" id="dot5-2"></a>
-  <a href="four-two.html" class="dots" id="dot5"></a>
+  <!--<a href="four-two.html" class="dots" id="dot5"></a>-->
   <a href="five.html" class="dots" id="dot6"></a>
   <div class="wrap-div">
      <p class="dir2">Explore the dots.</p>
