--- a/three.html
+++ b/three.html
@@ -23,6 +23,7 @@
   <source src="media/bye.mp3">
 </audio>
 <section class="rain">
+      <a href="index.html#return" class="nav-back-end" id="byebye"><img src="img/tree.png" /> Tree</a>
 
 </section>
 <script>
