--- a/four.html
+++ b/four.html
@@ -33,7 +33,7 @@
     </section>
     <section id="future-two" class="panel">
       <div class="inner">
-        <p>The social worker's eyes were serious. Her dirty-blond hair was carefully curled. She smelled of some flowery perfume that made Jimmy's eyes itch. He tried to take slow, shallow breaths. He hated her visits, hated how the whole family would sit down, all 10 kids, and stare at him and Murray. Usually, they were casually ignored, like everyone else. Just one of the pile of kids constantly underfoot. Being singled out was torturous. Jimmy was so focused on wishing that the visit would be over that he hadn't really understand her words. </p>
+        <p>The social worker's eyes were serious. Her dirty-blond hair was carefully curled. She smelled of some flowery perfume that made Jimmy's eyes itch. He tried to take slow, shallow breaths. He hated her visits, hated how the whole family would sit down, all ten kids, and stare at him and Murray. Usually, they were casually ignored, like everyone else. Just one of the pile of kids constantly underfoot. Being singled out was torturous. Jimmy was so focused on wishing that the visit would be over that he hadn't really understand her words. </p>
              </div>
     </section>
     <section id="future-three" class="panel">
