--- a/five.html
+++ b/five.html
@@ -28,7 +28,7 @@
   <section id="future2-one" class="panel slides">
     <div class="inner">
     <p>
-The tiny a baby lays in a plastic box, frail, fragile. He has a tube in his mouth. The woman beside him is young, pretty, tired. I can feel her feel her desperation and fear, but also her power. She is learning how to care for this small, small body. Her hand are becoming both quick and gentle. Her breasts are softening from the initial shock of learning to feed this small creature.  </p>
+The tiny a baby lays in a plastic box, frail, fragile. He has a tube in his mouth. The woman beside him is young, pretty, tired. I can feel her feel her desperation and fear, but also her power. She is learning how to care for baby Mitchell. Her hand are becoming both quick and gentle. Her breasts are softening from the initial shock of learning to feed someone else from her body from her bones.</p>
 
     </div>
   </section>
