--- a/credits.html
+++ b/credits.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <title>Mary Rose</title>
+    <title>Credits</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -17,20 +17,31 @@
     <!-- Custom CSS -->
      <link rel="stylesheet" href="css/custom.css">
   </head>
-  <body class="present">
- <a href="index.html#return" class="nav-back"><img src="img/tree.png" />Back to Tree</a>
-<h2>This project includes images from the following artists who have generously given their permission to use their work:</h2>
+  <body>
+ <a href="index.html" class="nav-back">Back to Project</a>
+ <section>
+  <div class="inner credits">
+    <h2>Credits</h2>
+<p>This project includes images from the following artists and content providers who have generously given their permission to use their work:</p>
+<ul>
+  <li>Adrian Lopez - <a href="http://alcrego.tumblr.com/">alcrego.tumblr.com</a>: <em>Windows cry because they can not see the sky.</em>. Background image on tower.html.</li>
+   <li>Gfycat - <a href="https://gfycat.com/">gfycat.com/</a>: <em>Light Shining through water</em>. Last image on main page.</li>
+   <li>Mystalia
+Everyle - <a href="https://mystalia.deviantart.com/">mystalia.deviantart.com</a>: dragons on 3rd screen of </li>
+</ul>
+<p>In addition the following open source/creative commons images have been used. Thank you so much to all the artists who share their work with the world:</p>
 
-<h2>In addition the following open source/creative commons images have been used. Thank you so much to all the artists who share their work with the world:</h2>
+<ul>
+  <li>Adrian Lopez - <a href="https://pixabay.com/en/users/unionbsv-3016670/">pixabay.com/en/users/unionbsv-3016670</a>: <em></em>. First screen image on fool.html.</li>
+   <li>Gfycat - <a href="https://gfycat.com/">gfycat.com/</a>: <em>Light Shining through water</em>. Last image on main page.</li>
+   <li>Mystalia
+Everyle - <a href="https://mystalia.deviantart.com/">mystalia.deviantart.com</a>: dragons on 3rd screen of </li>
+</ul>
+<p>This project uses Bootstrap, Jquery, and Scrollmagic</p>
 
-<h2>This project uses Bootstrap, Jquery, and Scrollmagic</h2>
-
-<h2>All text and custom code is Copyright Natasha Nunn 2017</h2>
-
-<script>
-  var audio = document.getElementById("myaudio");
-  audio.volume = 0.5;
-</script>
+<p>All text and custom code is Copyright Natasha Nunn 2017/2018</p>
+</div>
+</section>
 
   </body>
 </html>
