--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <title>Mary Rose</title>
+    <title>Star</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
@@ -58,14 +58,14 @@
     <div class="inner" id="dots">
  
 
-  <a href="one.html" class="dots" id="dot2"></a>
+  <a href="fool.html" class="dots" id="dot2"></a>
   <a name="return"></a>
-  <a href="two.html" class="dots" id="dot3"></a>
-  <a href="three.html" class="dots" id="dot4"></a>
-  <a href="three-two.html" class="dots" id="dot4-2"></a>
-  <a href="four.html" class="dots" id="dot5-2"></a>
+  <a href="emperor.html" class="dots" id="dot3"></a>
+  <a href="tower.html" class="dots" id="dot4"></a>
+  <a href="wheel.html" class="dots" id="dot4-2"></a>
+  <a href="moon.html" class="dots" id="dot5-2"></a>
   <!--<a href="four-two.html" class="dots" id="dot5"></a>-->
-  <a href="five.html" class="dots" id="dot6"></a>
+  <a href="world.html" class="dots" id="dot6"></a>
   <div class="wrap-div">
      <p class="dir2">Explore the dots.</p>
   </div>
