--- a/credits.html
+++ b/credits.html
@@ -38,10 +38,8 @@ Everyle - <a href="https://mystalia.deviantart.com/">mystalia.deviantart.com</a>
 <ul>
   <li>Dietmar Ematinger - <a href="https://pixabay.com/en/users/unionbsv-3016670/">https://pixabay.com/en/users/unionbsv-3016670/</a>: House image on first screen of <a href="fool.html">fool</a>. Creative Commons license.</li>
    <li>Unknown Photographer - <a href="https://pxhere.com/en/photo/1040948">https://pxhere.com/en/photo/1040948</a>: Tree image on <a href="index.html">main page</a>. Creative Commons license.</li>
-   <li>Mystalia
-Everyle - <a href="https://mystalia.deviantart.com/">mystalia.deviantart.com</a>: dragons on 3rd screen of <a href="emperor.html">emperor</a></li>
 </ul>
-<p>This project uses <a href="http://bootstrapdocs.com/">Bootstrap</a>, <a href="https://jquery.com/">Jquery</a>, and <a href="scrollmagic.io">Scrollmagic</a></p>
+<p>This project uses <a href="scrollmagic.io">Scrollmagic</a></p>
 
 <p>Copyright Natasha Nunn &copy; 2017/2018</p>
 </div>
