--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
        <p><a id="go" class="final">Or is it time to go?</a></p> 
         </div>
 </section> 
-
+<a href="credits.html" class="credits-link">CREDITS</a>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
