--- a/credits.html
+++ b/credits.html
@@ -24,14 +24,14 @@
     <h2>Credits</h2>
 <p>This project includes images from the following artists and content providers who have generously given their permission to use their work:</p>
 <ul>
-  <li>Silvia Pelissero AKA Agnes Cecile - <a href="http://agnescecile.bigcartel.com/">http://agnescecile.bigcartel.com/</a>: <em>Birthday</em>. First image on <a href="index.html">main page</a> (index.html) &amp; <em>Wakeful</em>. 5th screen of <a href="fool.html">fool</a>.
+  <li>Silvia Pelissero AKA Agnes Cecile - <a href="http://agnescecile.bigcartel.com/">http://agnescecile.bigcartel.com/</a>: <em>Birthday</em>. 1st image on <a href="index.html">main page</a> (index.html) &amp; <em>Wakeful</em>. 5th screen of <a href="fool.html">fool</a>.
   <li>Adrian Lopez - <a href="http://alcrego.tumblr.com/">alcrego.tumblr.com</a>: <em>Windows cry because they can not see the sky.</em>. Background image on <a href="tower.html">tower</a>.</li>
    <li>Gfycat - <a href="https://gfycat.com/">gfycat.com/</a>: <em>Light Shining through water</em>. Last image on <a href="index.html">main page</a>.</li>
    <li>Mystalia
-Everyle - <a href="https://mystalia.deviantart.com/">mystalia.deviantart.com</a>: dragons on 3rd screen of <a href="emperor.html">emperor</a>.</li>
- <li>Martin Woods - <a href="http://martinwoodsonline.blogspot.ca/">martinwoodsonline.blogspot.ca/</a>: old lady on the last screen of <a href="fool.html">fool</a>.</li>
- <li>Gabi Campanario - <a href="http://www.estudiocampanario.com/">www.estudiocampanario.com</a>: bus on 8th screen of <a href="fool.html">fool</a>.</li>
- <li>Glowphased - <a href="https://glowphased.deviantart.com/">glowphased.deviantart.com/</a>: eyes on 1st screen of <a href="wheel.html">wheel</a>.</li>
+Everyle - <a href="https://mystalia.deviantart.com/">mystalia.deviantart.com</a>: Dragons/demons on 3rd screen of <a href="emperor.html">emperor</a>.</li>
+ <li>Martin Woods - <a href="http://martinwoodsonline.blogspot.ca/">martinwoodsonline.blogspot.ca/</a>: Old lady on the last screen of <a href="fool.html">fool</a>.</li>
+ <li>Gabi Campanario - <a href="http://www.estudiocampanario.com/">www.estudiocampanario.com</a>: Bus on 8th screen of <a href="fool.html">fool</a>.</li>
+ <li>Glowphased - <a href="https://glowphased.deviantart.com/">glowphased.deviantart.com/</a>: Black eyes on 1st screen of <a href="wheel.html">wheel</a>.</li>
 </ul>
 <p>In addition the following open source/creative commons images were used. Thank you so much to all the artists who share their work with the world:</p>
 
@@ -39,7 +39,7 @@ Everyle - <a href="https://mystalia.deviantart.com/">mystalia.deviantart.com</a>
   <li>Dietmar Ematinger - <a href="https://pixabay.com/en/users/unionbsv-3016670/">https://pixabay.com/en/users/unionbsv-3016670/</a>: House image on first screen of <a href="fool.html">fool</a>. Creative Commons license.</li>
    <li>Unknown Photographer - <a href="https://pxhere.com/en/photo/1040948">https://pxhere.com/en/photo/1040948</a>: Tree image on <a href="index.html">main page</a>. Creative Commons license.</li>
 </ul>
-<p>This project uses <a href="scrollmagic.io">Scrollmagic</a></p>
+<p>This project uses the <a href="scrollmagic.io">Scrollmagic</a> javascript library.</p>
 
 <p>Copyright Natasha Nunn &copy; 2017/2018</p>
 </div>
