--- a/credits.html
+++ b/credits.html
@@ -18,8 +18,10 @@
      <link rel="stylesheet" href="css/custom.css">
   </head>
   <body>
- <a href="index.html" class="nav-back" id="two">Back to Project</a>
+     <div id="size-warning"><p>This story is not available on mobile devices and this story requires your browser window to be at least 1000px wide and 700px high. Please increase your browser size or use another device.</p></div>
+
  <section>
+   <a href="index.html" class="nav-back" id="two">Back to Story</a>
   <div class="inner credits">
     <h2>Credits</h2>
 <p>This project includes images from the following artists and content providers who have generously given their permission to use their work:</p>
@@ -32,6 +34,7 @@ Everyle - <a href="https://mystalia.deviantart.com/">mystalia.deviantart.com</a>
  <li>Martin Woods - <a href="http://martinwoodsonline.blogspot.ca/">martinwoodsonline.blogspot.ca/</a>: Old lady on the last screen of <a href="fool.html">fool</a>.</li>
  <li>Gabi Campanario - <a href="http://www.estudiocampanario.com/">www.estudiocampanario.com</a>: Bus on 8th screen of <a href="fool.html">fool</a>.</li>
  <li>Glowphased - <a href="https://glowphased.deviantart.com/">glowphased.deviantart.com/</a>: Black eyes on 1st screen of <a href="wheel.html">wheel</a>.</li>
+  Margaret Scanlan - <a href="http://margaretscanlan.co.uk/">margaretscanlan.co.uk</a>: Baby on 1st screen of <a href="emperor.html">emperor</a>.
 </ul>
 <p>In addition the following open source/creative commons images were used. Thank you so much to all the artists who share their work with the world:</p>
 
