--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
      <link rel="stylesheet" href="css/custom.css">
   </head>
   <body id="home"><a name="top"></a>
+    <div id="size-warning"><p>This story is not available on mobile devices and this story requires your browser window to be at least 1000px wide and 700px high. Please increase your browser size or use another device.</p></div>
    <section id="one">
     <section class="pulser">
       </section>
