--- a/tower.html
+++ b/tower.html
@@ -19,6 +19,7 @@
   </head>
   <body class="present">
  <a href="index.html#return" class="nav-back"><img src="img/tree.png" />Back to Tree</a>
+  <div id="size-warning"><p>This story is not available on mobile devices and this story requires your browser window to be at least 1000px wide and 700px high. Please increase your browser size or use another device.</p></div>
 <section class="rain">
       <a href="index.html#return" class="nav-back-end" id="byebye"><img src="img/tree.png" /> Tree</a>
 
