--- a/world.html
+++ b/world.html
@@ -18,7 +18,7 @@
      <link rel="stylesheet" href="css/custom.css">
   </head>
   <body>
-  
+   <div id="size-warning"><p>This story is not available on mobile devices and this story requires your browser window to be at least 1000px wide and 700px high. Please increase your browser size or use another device.</p></div>
   <a href="index.html#return" class="nav-back"><img src="img/tree.png" />Back to Tree</a>
       <div class="arrow-container">
         <div class="chevron"></div>
@@ -28,7 +28,7 @@
   <section id="future2-one" class="panel slides">
     <div class="inner">
     <p>
-The tiny a baby lays in a plastic box, frail, fragile. He has a tube in his mouth. The woman beside him is young, pretty, tired. I can feel her, feel her desperation and fear, but also her power. She is learning how to care for baby Mitchell. Her hand are becoming both quick and gentle. Her breasts are softening from the initial shock of learning to feed someone else from her body, from her bones.</p>
+The tiny a baby seems impossibly frail, fragile. The woman beside him is young, pretty, tired. I can feel her, feel her desperation and fear, but also her power. She is learning how mother. Her hand are becoming both quick and gentle. Her breasts are softening from the initial shock of learning to feed someone else from her body, from her bones.</p>
 
     </div>
   </section>
@@ -46,7 +46,7 @@ The tiny a baby lays in a plastic box, frail, fragile. He has a tube in his mout
   </section>
   <section id="future2-three" class="panel last-slide">
     <div class="inner">
-    <p>And I long with a pull harder than anything to have my time over. But all I have is this small family and when I see them start to falter, start to doubt their ability, start to pull away from each other into the outside world. I wrap my feeble nothingness around them and push into their love for that baby. I push with all my strength. The strength of all failed grandmothers. </p>
+    <p>And I long with a pull harder than anything to have my time over. But all I have is this small family and when I see them start to falter, start to doubt their ability, start to pull away from each other into the outside world. I wrap my feeble nothingness around them and push into their loves. I push with all my strength. The strength of all failed grandmothers. </p>
     <a href="index.html#return" class="nav-back-end"><img src="img/tree.png" /> Tree</a>
 
 
