--- a/fool.html
+++ b/fool.html
@@ -18,6 +18,7 @@
      <link rel="stylesheet" href="css/custom.css">
   </head>
   <body>
+     <div id="size-warning"><p>This story is not available on mobile devices and this story requires your browser window to be at least 1000px wide and 700px high. Please increase your browser size or use another device.</p></div>
  <a href="index.html#return" class="nav-back"><img src="img/tree.png" />Back to Tree</a>
    <div class="arrow-container">
         <div class="chevron"></div>
