--- a/credits.html
+++ b/credits.html
@@ -34,7 +34,7 @@ Everyle - <a href="https://mystalia.deviantart.com/">mystalia.deviantart.com</a>
  <li>Martin Woods - <a href="http://martinwoodsonline.blogspot.ca/">martinwoodsonline.blogspot.ca/</a>: Old lady on the last screen of <a href="fool.html">fool</a>.</li>
  <li>Gabi Campanario - <a href="http://www.estudiocampanario.com/">www.estudiocampanario.com</a>: Bus on 8th screen of <a href="fool.html">fool</a>.</li>
  <li>Glowphased - <a href="https://glowphased.deviantart.com/">glowphased.deviantart.com/</a>: Black eyes on 1st screen of <a href="wheel.html">wheel</a>.</li>
-  Margaret Scanlan - <a href="http://margaretscanlan.co.uk/">margaretscanlan.co.uk</a>: Baby on 1st screen of <a href="emperor.html">emperor</a>.
+  <li>Margaret Scanlan - <a href="http://margaretscanlan.co.uk/">margaretscanlan.co.uk</a>: Baby on 1st screen of <a href="emperor.html">emperor</a>.</li>
 </ul>
 <p>In addition the following open source/creative commons images were used. Thank you so much to all the artists who share their work with the world:</p>
 
