--- a/credits.html
+++ b/credits.html
@@ -41,6 +41,7 @@ Everyle - <a href="https://mystalia.deviantart.com/">mystalia.deviantart.com</a>
 <ul>
   <li>Dietmar Ematinger - <a href="https://pixabay.com/en/users/unionbsv-3016670/">https://pixabay.com/en/users/unionbsv-3016670/</a>: House image on first screen of <a href="fool.html">fool</a>. Creative Commons license.</li>
    <li>Unknown Photographer - <a href="https://pxhere.com/en/photo/1040948">https://pxhere.com/en/photo/1040948</a>: Tree image on <a href="index.html">main page</a>. Creative Commons license.</li>
+   <li>Unknown Photographer - <a href="http://maxpixel.freegreatpicture.com/">http://maxpixel.freegreatpicture.com/Cute-Hand-Child-Care-Face-Baby-Sleeping-Sleep-20339</a>: Baby image on <a href="emperor.html">emperor</a> heavily modified. Creative Commons license.</li>
 </ul>
 <p>This project uses the <a href="scrollmagic.io">Scrollmagic</a> javascript library.</p>
 
