--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
     
     <!-- Custom CSS -->
      <link rel="stylesheet" href="css/custom.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-112667190-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-112667190-1');
+</script>
+
   </head>
   <body id="home"><a name="top"></a>
     <div id="size-warning"><p>This story is not available on mobile devices and this story requires your browser window to be at least 1000px wide and 700px high. Please increase your browser size or use another device.</p></div>
