--- a/world.html
+++ b/world.html
@@ -28,7 +28,7 @@
   <section id="future2-one" class="panel slides">
     <div class="inner">
     <p>
-The tiny a baby seems impossibly frail, fragile. The woman beside him is young, pretty, tired. I can feel her, feel her desperation and fear, but also her power. She is learning how mother. Her hand are becoming both quick and gentle. Her breasts are softening from the initial shock of learning to feed someone else from her body, from her bones.</p>
+The tiny a baby seems impossibly frail, fragile. The woman beside him is young, pretty, tired. I can feel her, feel her desperation and fear, but also her power. She is learning how to mother. Her hand are becoming both quick and gentle. Her breasts are softening from the initial shock of learning to feed someone else from her body, from her bones.</p>
 
     </div>
   </section>
